--- a/Szakdolgozat/src/szakdolgozat/login.form
+++ b/Szakdolgozat/src/szakdolgozat/login.form
@@ -105,7 +105,7 @@
     <Component class="javax.swing.JLabel" name="background">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/pictures/doctor-ge3daf9422_640.jpg"/>
+          <Image iconType="3" name="/pictures/doctor.jpg"/>
         </Property>
       </Properties>
       <Constraints>
