--- a/Szakdolgozat/src/szakdolgozat/patiens.form
+++ b/Szakdolgozat/src/szakdolgozat/patiens.form
@@ -162,6 +162,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="postcode">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="postcodeActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="99" y="181" width="108" height="-1"/>
